--- a/templates/html/items.html
+++ b/templates/html/items.html
@@ -1,8 +1,16 @@
 <html>
   <head>
-    <title>Feeds</title>
+    <title>Items</title>
   </head>
   <body>
 
+    {{ range $i, $it := .Items }}
+    <div class="item">
+      <h2><a href="{{ $it.Link }}">{{ $it.Title }}</a> <small>{{ $it.Link }}</small></h2>
+      <p>{{ $it.Content }}</p>
+      <p>{{ $it.Author }}, {{ $it.Published }}</p>
+      </div>
+    {{ end }}
+    
   </body>
 </html>
