--- a/templates/html/search_query.html
+++ b/templates/html/search_query.html
@@ -4,10 +4,7 @@
   </head>
   <body>
 
-    <form>
-      <input type="text" name="q" id="q" placeholder="Enter query string here" />
-      <button type="submit">Search</button>
-      </form>
+    {{ template "inc_search_form.html" }}
     
   </body>
 </html>
