--- a/templates/html/search_results.html
+++ b/templates/html/search_results.html
@@ -4,6 +4,8 @@
   </head>
   <body>
 
+    {{ template "inc_search_form.html" }}
+    
     <h1>Query results for <q>{{ .Query }}</q></h1>
     
     {{ range $i, $it := .Items }}
