--- a/templates/html/inc_head.html
+++ b/templates/html/inc_head.html
@@ -1,5 +1,18 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <title>{{ .Title }}</title>
+    <meta charset="utf-8">
+    <title></title>
   </head>
   <body>
+
+    <div id="header">
+    <ul>
+      <li><a href="/">home</a></li>
+      <li><a href="/feeds">feeds</a></li>      
+      <li><a href="/search">search</a></li>
+    </ul>
+    </div>
+
+    <div id="main">
+    
