more better pagination

--- a/templates/html/inc_head.html
+++ b/templates/html/inc_head.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>{{ if .PageTitle }}{{ .PageTitle }}{{ end }}</title>
   </head>
   <body>
 
