--- a/templates/html/inc_pagination.html
+++ b/templates/html/inc_pagination.html
@@ -1,2 +1,24 @@
-<div id="pagination">
-</div>
+{{ if gt .Pagination.Pages 1 }}
+<ul class="pagination" id="pagination">
+
+  <!-- first -->
+  
+  {{ if gt .Pagination.Page 1 }}
+  <li><a href="FIXME&page={{ .Pagination.Page - 1 }}">Previous page</a></li>
+  {{ else }}
+  <li class="disabled"><a href="#">This is the first page</a></li>
+  {{ end }}
+
+  <!-- middle -->
+
+
+  <!-- last -->
+  
+  {{ if tt .Pagination.Page .Pagination.PageCount }}
+  <li><a href="FIXME&page={{ .Pagination.Page + 1 }}">Next page</a></li>
+  {{ else }}
+  <li class="disabled"><a href="#">This is the last page</a></li>
+  {{ end }}
+  
+</ul>
+{{ end }}
