rearrange all the URLs; break formatting?

--- a/templates/html/inc_head.html
+++ b/templates/html/inc_head.html
@@ -7,12 +7,23 @@
   <body>
 
     <div id="header">
-    <ul>
-      <li><a href="/">home</a></li>
-      <li><a href="/feeds">feeds</a></li>      
-      <li><a href="/search">search</a></li>
-    </ul>
-    </div>
 
+      <div id="search">
+	<form>
+	  <input type="text" name="q" id="q" placeholder="Enter query string here" />
+	  <button type="submit">Search</button>
+	</form>
+      </div>
+
+      <div id="nav">
+	<ul>
+	  <li><a href="/">home</a></li>
+	  <li><a href="/feeds">feeds</a></li>      
+	  <li><a href="/add">add</a></li>      
+	</ul>
+      </div>
+      
+    </div>
+      
     <div id="main">
     
