--- a/templates/html/inc_head.html
+++ b/templates/html/inc_head.html
@@ -9,7 +9,7 @@
     <div id="header">
 
       <div id="search">
-	<form>
+	<form method="GET" action="/search">
 	  <input type="text" name="q" id="q" placeholder="Enter query string here" />
 	  <button type="submit">Search</button>
 	</form>
@@ -18,7 +18,7 @@
       <div id="nav">
 	<ul>
 	  <li><a href="/">home</a></li>
-	  <li><a href="/feeds">feeds</a></li>      
+	  <li><a href="/recent">recent</a></li>      
 	  <li><a href="/add">add</a></li>      
 	</ul>
       </div>
