what is the simplest page for an item

--- a/templates/html/inc_items.html
+++ b/templates/html/inc_items.html
@@ -11,6 +11,6 @@
       {{ end }}
       </blockquote>
       </div>
-      <p>{{ $it.Link }}</p>
+      <p>{{ $it.Link }} <a href="/item?guid={{ $it.GUID }}">permalink</a></p>
       </div>
     {{ end }}
