--- a/templates/html/inc_item.html
+++ b/templates/html/inc_item.html
@@ -12,5 +12,6 @@
       </blockquote>
       </div>
       <p>{{ $it.Link }} <a href="/item?guid={{ $it.GUID }}">permalink</a></p>
+      <p><a href="">{{ $it.Feed.Title }}</a></p>
       </div>
 {{ end }}
