--- a/templates/html/inc_head.html
+++ b/templates/html/inc_head.html
@@ -8,13 +8,15 @@
 
     <div id="header">
 
+      {{ if .User }}
       <div id="search">
 	<form method="GET" action="/search">
 	  <input type="text" name="q" id="q" placeholder="Enter query string here" />
 	  <button type="submit">Search</button>
 	</form>
       </div>
-
+      {{ end }}
+      
       <div id="nav">
 	<ul>
 	  {{ if .User }}
